# Track-CLI

./: pyproject.toml  requirements.txt  setup.cfg
tests/: test_report.py
timecli/: main.py  report.py  storage.py  tracker.py
