[project]
name = "track-cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=25.1.0",
    "pytest>=8.4.1",
    "python-dateutil>=2.9.0.post0",
    "ruff>=0.12.0",
    "typer>=0.16.0",
]

[project.scripts]
track = "timecli.main:app"
